--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +1(647)513-3192</p>
-<p>Email: raghavkasrija1@gmail.com</p>
+<p>Tel: +1(*************</p>
+<p>Email: r************1@gmail.com</p>
 <p>Address:</p>
 <p>
-  8 Fanning Trail<br />
-  Brampton <br />
+  8 F***********l<br />
+  ******** <br />
   Canada <br />
 </p>
