--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1> Raghav's Portfolio</h1>
-    <h2> I'm a Web Developer</h2>
-
-    <hr/>
-
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <br/>
-    <a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking.png" height="200"></a>
-    <br/>
-    <h3><a href="./public/birthday-invite.html">Birthday Invite project</a></h3>
-    <br/>
-    <a href="./public/birthday-invite.html"><img src="./assets/images/birthday-invite.png" height="200"></a>
-    <hr/>
-    <a href="./public/about.html"> About Me</a>
-    <a href="./public/contact.html"> Contact me</a>
+    <h1>Resume</h1>
+    <img src="./Man.jpg" height="250" alt="Random man's Photo">
+    <h2>Summary</h2>
+          <p>My name is Raghav Kasrija. I am aspiring to become a Software engineer.</p>
+<hr/>
+          <h2>Work Experience</h2>
+             <h3>Operations Manager</h3>
+      <ol>
+            <li>I have been working as an operation's manager at Legacy protection Services for almost 4 years. However, I am planning to change my field now and start my career in IT. </li>
+        
+            <li>I have completed a HTML bootcamp with MIIT.</li>
+            <li>I have been known for completing tasks on time</li>
+      </ol>
+<hr/>
+    <h2>Education</h2>
+        <ul>
+            <li>I have completed BBA (Honours) from Algoma University, Brampton.
+                <ul><li> Specializing in Human resource and Marketing.  </li></ul>
+            </br>
+            </li> 
+            <li>I have completed Angela's course of HTML, CSS, C++ </li>
+        </ul> 
+    <h2> Skills </h2>
+           <p>I am known for completing tasks of time. </p>
 </body>
+
+<hr/>
+
+<a href="./Hobbies.html">My Hobbies</a>
+<a href="./Contact.html">Contact me</a>
+
 </html>
+<footer> Copyrights: Raghav: All copy rights reserved</footer>
